[add]: add index graph
